# boox-opensource

./: .gitignore  CMakeLists.txt  README
code/lib/wv2-0.4.2/src/: CMakeLists.txt  global.h  graphics.h  headers95.h  olestream.cpp  parser9x.h  pole.h  properties97.h  utilities.h  word95_generated.h  word97_generated.h  word_helper.h  wvlog.h
code/src/: CMakeLists.txt  README
code/src/calculator/: CMakeLists.txt  button.cpp  button.h  button_view.cpp  button_view.h  calculator.cpp  calculator.h  calculator.pro  main.cpp
code/src/calendar/: CMakeLists.txt  main.cpp
code/src/clock/: CMakeLists.txt  clock_dialog.cpp  clock_dialog.h  main.cpp
code/src/cr3/: CMakeLists.txt
code/src/cr3/cr3_onyx/: CMakeLists.txt
code/src/cr3/cr3qt/: CMakeLists.txt
code/src/device_server/: CMakeLists.txt  ds_application.cpp  ds_application.h  ds_view.cpp  ds_view.h  main.cpp  res.qrc  vsftpd.cpp  vsftpd.h
code/src/dictionary/: CMakeLists.txt  README_ONYX  dict_frame.cpp  dict_frame.h  dict_widget.cpp  dict_widget.h  dictionary_images.qrc  dictionary_manager.cpp  dictionary_manager.h  dictionary_plugin.h
code/src/dictionary/qstardict_plugin/: distance.cpp  distance.h  qstardict_plugin_impl.cpp  qstardict_plugin_impl.h  stardict_backend.cpp  stardict_backend.h  stardict_base.cpp  stardict_base.h  stardict_ziplib.cpp  stardict_ziplib.h
code/src/dictionary/unittests/: libdict_test.cpp
code/src/dictionary_tool/: CMakeLists.txt  dict_application.cpp  dict_application.h  main.cpp
code/src/djvu_reader/: CMakeLists.txt  README_ONYX  djvu_application.cpp  djvu_application.h  djvu_context.cpp  djvu_context.h  djvu_document.cpp  djvu_document.h  djvu_job.cpp  djvu_job.h  djvu_model.cpp  djvu_model.h  djvu_page.cpp  djvu_page.h  djvu_render_proxy.cpp  djvu_render_proxy.h  djvu_thumbnail.h  djvu_thumbnail_view.cpp  djvu_thumbnail_view.h  djvu_utils.h  djvu_view.cpp  djvu_view.h  main.cpp
code/src/djvu_reader/libdjvu/: ByteStream.cpp  CMakeLists.txt  DjVuDocument.cpp  DjVuGlobal.h  DjVuToPS.cpp  GContainer.h  GException.cpp  GOS.cpp  GString.cpp  GThreads.cpp  GThreads.h  config.h  config_x86_linux.h  ddjvuapi.cpp  ddjvuapi.h  debug.cpp  miniexp.cpp  miniexp.h  onyx_config_libdjvu.h  onyx_config_libdjvu.h.in
code/src/fbreader-0.12.10/: CMakeLists.txt
code/src/fbreader-0.12.10/fbreader/: FBReader
code/src/fbreader-0.12.10/fribidi/: config.h
code/src/fbreader-0.12.10/sqlite3/: CMakeLists.txt  configure  configure.ac
code/src/fbreader-0.12.10/wv2-0.4.2/: README_ONYX
code/src/fbreader-0.12.10/zlibrary/: CMakeLists.txt
code/src/fbreader_onyx/: CMakeLists.txt  README_ONYX
code/src/fbreader_onyx/bzip2/: CMakeLists.txt
code/src/fbreader_onyx/doc/: check_points.txt  doc.txt  fbreader.vsd  steps.txt
code/src/fbreader_onyx/src/: onyx_reader_main.cpp
code/src/fbreader_onyx/wv2-0.4.2/: CMakeLists.txt
code/src/fbreader_onyx/zlibrary/: CMakeLists.txt
code/src/feed_reader/: CMakeLists.txt  add_feed_dialog.cpp  add_feed_dialog.h  article.cpp  article.h  article_list_model.cpp  article_list_model.h  article_list_page.cpp  article_list_page.h  article_page.cpp  article_page.h  database.cpp  database.h  feed.cpp  feed.h  feed_fetcher.cpp  feed_fetcher.h  feed_list_model.cpp  feed_list_model.h  feed_parser.h  feed_reader.cpp  feeds_page.cpp  feeds_page.h  init.cpp  init.h  main_widget.cpp  main_widget.h  rss_feed_parser.cpp  rss_feed_parser.h  singleton.h  util.cpp  util.h  widget_updater.cpp  widget_updater.h
code/src/feed_reader/tests/: CMakeLists.txt  acceptance_test.cpp  article_test.cpp  database_test.cpp  feed_test.cpp  rss_feed_parser_test.cpp
code/src/gomoku/: CMakeLists.txt  board.cpp  board.h  gomoku_actions.cpp  gomoku_actions.h  gomoku_widget.cpp  gomoku_widget.h  images.qrc  main.cpp  main_widget.cpp  main_widget.h
code/src/music_player/: CMakeLists.txt  License.CURL  README_ONYX  main.cpp  music_player.qrc  onyx_player_view.cpp  onyx_player_view.h  player_application.cpp  player_application.h  player_title_bar.cpp  player_title_bar.h  player_view.cpp  player_view.h
code/src/music_player/core/: buffer.h  constants.h  decoder.cpp  decoder.h  decoderfactory.h  downloader.cpp  downloader.h  effect.cpp  effect.h  effectfactory.h  fileinfo.cpp  fileinfo.h  output.cpp  output.h  outputfactory.h  recycler.cpp  recycler.h  soundcore.cpp  soundcore.h  statehandler.cpp  statehandler.h  streamreader.cpp  streamreader.h  volumecontrol.cpp  volumecontrol.h
code/src/music_player/effect/: bs2bconverter.cpp  bs2bconverter.h  effectbs2bfactory.cpp  effectbs2bfactory.h  effectsrconverterfactory.cpp  effectsrconverterfactory.h  srconverter.cpp  srconverter.h
code/src/pdf_tools/: CMakeLists.txt
code/src/podofo/: CMakeLists.txt
code/src/poppler/: CMakeLists.txt  Makefile.am  NEWS  configure.ac
code/src/rss_reader/: CMakeLists.txt  cancelWindow.cpp  cancelWindow.h  conf.h  dataCache.cpp  dataCache.h  dateParser.cpp  dateParser.h  developer_readme.txt  exitCodes.h  feedStore.cpp  feedStore.h  htmlWriter.cpp  htmlWriter.h  itemStore.cpp  itemStore.h  locking.cpp  locking.h  main.cpp  readme.txt  rssFeed.cpp  rssFeed.h  rssFeedInfo.cpp  rssFeedInfo.h  rssItem.cpp  rssItem.h  rssLoaderThread.cpp  rssLoaderThread.h  rss_feed_dialog.cpp  rss_feed_dialog.h  rss_images.qrc  rss_reader_view.cpp  rss_reader_view.h  rss_view.cpp  rss_view.h  sectionTree.cpp  sectionTree.h  settings_view.cpp  settings_view.h  status.cpp  (+3 more)
code/src/sound/: CMakeLists.txt  async_player.cpp  async_player.h  sound.cpp  sound.h  wave.cpp  wave.h
code/src/sudoku/: CMakeLists.txt  CMakeLists.txt.back  README  TODO  board.cpp  board.h  cell.cpp  cell.h  dancing_links.cpp  dancing_links.h  dialog.cpp  dialog.h  frame.cpp  frame.h  main.cpp  mdialog.cpp  mdialog.h  menudialog.cpp  menudialog.h  move.cpp  move.h  mtoolbutton.cpp  mtoolbutton.h  pattern.h  puzzle.cpp  puzzle.h  simsu.cpp  simsu.h  square.cpp  square.h  sudokuactions.cpp  sudokuactions.h
code/src/tts/: CMakeLists.txt  tts.cpp  tts.h  tts_images.qrc  tts_interface.h  tts_plugin.h  tts_plugin_interface.h  tts_widget.cpp  tts_widget.h
(+1103 files in other folders)
