# All sub directories.
add_subdirectory(dictionary_tool)
add_subdirectory(djvu_reader)
#add_subdirectory(fbreader_onyx)
add_subdirectory(fbreader-0.12.10)
add_subdirectory(music_player)
add_subdirectory(sudoku)
#add_subdirectory(feed_reader)
add_subdirectory(calculator)
add_subdirectory(cr3)
add_subdirectory(rss_reader)
add_subdirectory(clock)
add_subdirectory(calendar)
#add_subdirectory(podofo)
add_subdirectory(gomoku)
add_subdirectory(pdf_tools)

