include(CheckIncludeFiles)
check_include_files(new.h HAVE_HEADER_NEW_H)
check_include_files(new HAVE_HEADER_NEW)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/onyx_config_libdjvu.h.in
  ${CMAKE_CURRENT_SOURCE_DIR}/onyx_config_libdjvu.h)


SET(HDRS
Arrays.h
atomic.h
BSByteStream.h
ByteStream.h
DataPool.h
ddjvuapi.h
debug.h
DjVmDir.h
DjVmDir0.h
DjVmDoc.h
DjVmNav.h
DjVuAnno.h
DjVuDocEditor.h
DjVuDocument.h
DjVuDumpHelper.h
DjVuErrorList.h
DjVuFile.h
DjVuFileCache.h
DjVuGlobal.h
DjVuImage.h
DjVuInfo.h
DjVuMessage.h
DjVuMessageLite.h
DjVuNavDir.h
DjVuPalette.h
DjVuPort.h
DjVuText.h
DjVuToPS.h
GBitmap.h
GContainer.h
GException.h
GIFFManager.h
GMapAreas.h
GOS.h
GPixmap.h
GRect.h
GScaler.h
GSmartPointer.h
GString.h
GThreads.h
GURL.h
IFFByteStream.h
IW44Image.h
JB2Image.h
JPEGDecoder.h
miniexp.h
MMRDecoder.h
MMX.h
Template.h
UnicodeByteStream.h
XMLParser.h
XMLTags.h
ZPCodec.h)


SET(SRCS
Arrays.cpp
atomic.cpp
BSByteStream.cpp
BSEncodeByteStream.cpp
ByteStream.cpp
DataPool.cpp
ddjvuapi.cpp
debug.cpp
DjVmDir.cpp
DjVmDir0.cpp
DjVmDoc.cpp
DjVmNav.cpp
DjVuAnno.cpp
DjVuDocEditor.cpp
DjVuDocument.cpp
DjVuDumpHelper.cpp
DjVuErrorList.cpp
DjVuFile.cpp
DjVuFileCache.cpp
DjVuGlobal.cpp
DjVuGlobalMemory.cpp
DjVuImage.cpp
DjVuInfo.cpp
DjVuMessage.cpp
DjVuMessageLite.cpp
DjVuNavDir.cpp
DjVuPalette.cpp
DjVuPort.cpp
DjVuText.cpp
DjVuToPS.cpp
GBitmap.cpp
GContainer.cpp
GException.cpp
GIFFManager.cpp
GMapAreas.cpp
GOS.cpp
GPixmap.cpp
GRect.cpp
GScaler.cpp
GSmartPointer.cpp
GString.cpp
GThreads.cpp
GUnicode.cpp
GURL.cpp
IFFByteStream.cpp
IW44EncodeCodec.cpp
IW44Image.cpp
JB2EncodeCodec.cpp
JB2Image.cpp
JPEGDecoder.cpp
miniexp.cpp
MMRDecoder.cpp
MMX.cpp
UnicodeByteStream.cpp
XMLParser.cpp
XMLTags.cpp
ZPCodec.cpp)

ADD_LIBRARY(djvulibre ${HDRS} ${SRCS})


